# packages/api/src/openapi/api.yml
@@ -230,7 +230,7 @@ paths:
     get:
       tags:
         - 🧑‍💻 Users
-      summary: Retrieve a list of users.
+      summary: Retrieve a list of users
       description: This endpoint allows you to retrieve a paginated list of users.
       x-eov-operation-handler: userController
       operationId: findAndCountAll
@@ -288,7 +288,7 @@ paths:
                   message:
                     type: string
                     description: Descriptive message of the operation.
-                    default: Created
+                    default: OK
                   count:
                     type: integer
                     format: int64
@@ -302,6 +302,82 @@ paths:
                   - statusCode
                   - message
                   - count
+                  - data
+                additionalProperties: false
+        400:
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BadRequest'
+        401:
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Unauthorized'
+        403:
+          description: Forbidden
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Forbidden'
+        404:
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/NotFound'
+        409:
+          description: Conflict
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Conflict'
+        500:
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/InternalServerError'
+  /users/{userId}:
+    get:
+      tags:
+        - 🧑‍💻 Users
+      summary: Retrieve user details by their unique ID
+      description: This endpoint allows clients to fetch detailed information about a user using their unique user ID.
+      x-eov-operation-handler: userController
+      operationId: findById
+      parameters:
+        - name: userId
+          in: path
+          description: The user's id.
+          required: true
+          schema:
+            type: string
+            example: 123e4567-e89b-12d3-a456-426614174000
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  statusCode:
+                    type: integer
+                    format: int64
+                    description: HTTP status code indicating a successful operation.
+                    default: 200
+                  message:
+                    type: string
+                    description: Descriptive message of the operation.
+                    default: OK
+                  data:
+                    $ref: '#/components/schemas/User'
+                required:
+                  - statusCode
+                  - message
                   - data
                 additionalProperties: false
         400:
